Implemented 2 step initiative System